# tilr

./: Cargo.toml  README.md  create-tiles.py  flake.nix
.github/workflows/: rust.yml
src/: lib.rs  main.rs  mosaic.rs  tiles.rs  tileset.rs  utils.rs
src/tiles/: mod.rs  tile.rs  tileset.rs
tests/: filetypes.rs  gradient.rs  utils.rs
