[package]
name = "tilr"
description = "Build a mosaic of an image from a set of smaller image 'tiles'."
version = "0.2.1"
authors = ["Charles German <5donuts@pm.me>"]
edition = "2021"
readme = "./README.md"
license = "GPL-3.0-or-later"
homepage = "https://github.com/5donuts/tilr"
categories = ["multimedia::images"]
keywords = ["image-processing"]
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24"
structopt = "0.3"
